@@ -22,7 +22,6 @@ For 1.4:
       Types
          Icosahedron
       Have toolbar option on proj tool to create specific projection type
-      Either open projection window from context, or remove button for it
 
 Post 1.4:
    Coloring on texture paint (??)
