@@ -1,6 +1,7 @@
 Changes for 1.3.6
    Save/restore window size
    Include projection in frame all/selected command
+   Open projection window from group and projection properties panels
    Better MD3_PATH handling
       Get MD3_PATH from skins as well as model header
       Allow separate MD3_PATH for each skin
